# Cold-Email-Automations

./: README.md  docker-compose.yml  requirements.txt
app/: .env  chains.py  main.py  portfolio.py  utils.py
app/vectorstore/: chroma.sqlite3
backend/: .dockerignore  ARCHITECTURE_FIXES.md  Dockerfile  Dockerfile.prod  README.md  build.sh  docker-compose.prod.yml  main.py  pyproject.toml  requirements.txt  test.py  test_job.json
backend/routes/: email_generator.py
backend/schema/: email.py
backend/src/: agents.py  portfolio.py  prompt.py  utils.py
backend/src/vectorstore/: chroma.sqlite3
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  nginx.conf  package-lock.json  package.json
frontend/src/: App.js  index.css
frontend/src/components/: EmailForm.js  EmailResults.js  Header.js  Layout.js  LoadingSpinner.js  Sidebar.js
frontend/src/pages/: EmailGenerator.js  History.js  Home.js
